--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
   },
   "homepage": "https://github.com/GowthamG30/pollster#readme",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
+    "express-session": "^1.17.2",
     "mongoose": "^6.0.12",
     "nodemon": "^2.0.14",
+    "passport": "^0.5.0",
+    "passport-local-mongoose": "^6.1.0",
     "react-chartjs-2": "^3.2.0"
   }
 }
