--- a/package.json
+++ b/package.json
@@ -18,14 +18,15 @@
   },
   "homepage": "https://github.com/GowthamG30/pollster#readme",
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1",
+    "express": "^4.17.2",
     "express-session": "^1.17.2",
-    "mongoose": "^6.0.12",
-    "nodemon": "^2.0.14",
-    "passport": "^0.5.0",
+    "mongoose": "^6.1.5",
+    "nodemon": "^2.0.15",
+    "passport": "^0.5.2",
     "passport-local-mongoose": "^6.1.0",
-    "react-chartjs-2": "^3.2.0"
+    "react-chartjs-2": "^3.3.0"
   }
 }
