--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Polling website.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+		"start": "cd frontend && npm run build && cd .. && node server.js"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
     "nodemon": "^2.0.14",
+    "path": "^0.12.7",
     "react-chartjs-2": "^3.2.0"
   }
 }
