--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cd frontend && npm i && npm run build && cd .. && node server.js"
+    "start": "cd frontend && npm run build && cd .. && node server.js"
   },
   "repository": {
     "type": "git",
