--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cd frontend && npm run build && cd .. && node server.js"
+		"start": "node server.js",
+    "//start": "cd frontend && npm run build && cd .. && node server.js"
   },
   "repository": {
     "type": "git",
